--- a/polkadot/zombienet-sdk-tests/Cargo.toml
+++ b/polkadot/zombienet-sdk-tests/Cargo.toml
@@ -18,6 +18,7 @@ zombienet-sdk = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 codec = { workspace = true, features = ["derive"] }
+polkadot-primitives = { workspace = true, default-features = true }
 
 [features]
 zombie-metadata = []
