--- a/bridges/modules/xcm-bridge-hub/Cargo.toml
+++ b/bridges/modules/xcm-bridge-hub/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "pallet-xcm-bridge-hub"
 description = "Module that adds dynamic bridges/lanes support to XCM infrastructure at the bridge hub."
-version = "0.13.0"
+version = "0.13.2"
 authors.workspace = true
 edition.workspace = true
 license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
@@ -28,20 +28,19 @@ xcm-builder.workspace = true
 xcm-executor.workspace = true
 
 [dev-dependencies]
-pallet-balances = { workspace = true }
-sp-io = { workspace = true }
-bp-runtime = { workspace = true }
-bp-header-chain = { workspace = true }
-pallet-xcm-bridge-hub-router = { workspace = true }
-bp-xcm-bridge-hub-router = { workspace = true }
-polkadot-parachain-primitives = { workspace = true }
+pallet-balances = { path = "../../../substrate/frame/balances", default-features = false }
+sp-io = { path = "../../../substrate/primitives/io", default-features = false }
+bp-runtime = { path = "../../primitives/runtime", default-features = false }
+bp-header-chain = { path = "../../primitives/header-chain", default-features = false }
+pallet-xcm-bridge-hub-router = { path = "../xcm-bridge-hub-router", default-features = false }
+bp-xcm-bridge-hub-router = { path = "../../primitives/xcm-bridge-hub-router", default-features = false }
+polkadot-parachain-primitives = { path = "../../../polkadot/parachain", default-features = false }
 
 [features]
 default = ["std"]
 std = [
 	"bp-messages/std",
 	"bp-runtime/std",
-	"bp-xcm-bridge-hub-router/std",
 	"bp-xcm-bridge-hub/std",
 	"codec/std",
 	"frame-support/std",
