--- a/cumulus/parachains/runtimes/assets/test-utils/Cargo.toml
+++ b/cumulus/parachains/runtimes/assets/test-utils/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "asset-test-utils"
-version = "18.0.0"
+version = "20.0.0"
 authors.workspace = true
 edition.workspace = true
 description = "Test utils for Asset Hub runtimes."
@@ -11,36 +11,28 @@ workspace = true
 
 [dependencies]
 codec = { features = ["derive", "max-encoded-len"], workspace = true }
-
-# Substrate
-frame-support = { workspace = true }
-frame-system = { workspace = true }
-pallet-assets = { workspace = true }
-pallet-asset-conversion = { workspace = true }
-pallet-balances = { workspace = true }
-pallet-timestamp = { workspace = true }
-pallet-session = { workspace = true }
-sp-io = { workspace = true }
-sp-runtime = { workspace = true }
-
-# Cumulus
-cumulus-pallet-parachain-system = { workspace = true }
-cumulus-pallet-xcmp-queue = { workspace = true }
-pallet-collator-selection = { workspace = true }
-parachains-common = { workspace = true }
-cumulus-primitives-core = { workspace = true }
-parachain-info = { workspace = true }
-parachains-runtimes-test-utils = { workspace = true }
-
-# Polkadot
-xcm = { workspace = true }
-xcm-builder = { workspace = true }
-xcm-executor = { workspace = true }
-pallet-xcm = { workspace = true }
-xcm-runtime-apis = { workspace = true }
-
-# Bridges
-pallet-xcm-bridge-hub-router = { workspace = true }
+frame-support.workspace = true
+frame-system.workspace = true
+pallet-assets.workspace = true
+pallet-asset-conversion.workspace = true
+pallet-balances.workspace = true
+pallet-timestamp.workspace = true
+pallet-session.workspace = true
+sp-io.workspace = true
+sp-runtime.workspace = true
+cumulus-pallet-parachain-system.workspace = true
+cumulus-pallet-xcmp-queue.workspace = true
+pallet-collator-selection.workspace = true
+parachains-common.workspace = true
+cumulus-primitives-core.workspace = true
+parachain-info.workspace = true
+parachains-runtimes-test-utils.workspace = true
+xcm.workspace = true
+xcm-builder.workspace = true
+xcm-executor.workspace = true
+pallet-xcm.workspace = true
+xcm-runtime-apis.workspace = true
+pallet-xcm-bridge-hub-router.workspace = true
 
 [dev-dependencies]
 hex-literal = { workspace = true, default-features = true }
