--- a/cumulus/parachains/runtimes/test-utils/Cargo.toml
+++ b/cumulus/parachains/runtimes/test-utils/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "parachains-runtimes-test-utils"
-version = "17.0.0"
+version = "19.0.0"
 authors.workspace = true
 edition.workspace = true
 description = "Utils for Runtimes testing"
@@ -11,35 +11,30 @@ workspace = true
 
 [dependencies]
 codec = { features = ["derive", "max-encoded-len"], workspace = true }
-
-# Substrate
-frame-support = { workspace = true }
-frame-system = { workspace = true }
-pallet-balances = { workspace = true }
-pallet-session = { workspace = true }
-pallet-timestamp = { workspace = true }
-sp-consensus-aura = { workspace = true }
-sp-io = { workspace = true }
-sp-runtime = { workspace = true }
-sp-tracing = { workspace = true, default-features = true }
-sp-core = { workspace = true }
-
-# Cumulus
-cumulus-pallet-parachain-system = { workspace = true }
-cumulus-pallet-xcmp-queue = { workspace = true }
-pallet-collator-selection = { workspace = true }
-parachain-info = { workspace = true }
-parachains-common = { workspace = true }
-cumulus-primitives-core = { workspace = true }
-cumulus-primitives-parachain-inherent = { workspace = true }
-cumulus-test-relay-sproof-builder = { workspace = true }
-
-# Polkadot
-xcm = { workspace = true }
-xcm-executor = { workspace = true }
-pallet-xcm = { workspace = true }
-xcm-runtime-apis = { workspace = true }
-polkadot-parachain-primitives = { workspace = true }
+frame-support.workspace = true
+frame-system.workspace = true
+pallet-balances.workspace = true
+pallet-session.workspace = true
+pallet-timestamp.workspace = true
+sp-consensus-aura.workspace = true
+sp-io.workspace = true
+sp-runtime.workspace = true
+sp-tracing.workspace = true
+sp-tracing.default-features = true
+sp-core.workspace = true
+cumulus-pallet-parachain-system.workspace = true
+cumulus-pallet-xcmp-queue.workspace = true
+pallet-collator-selection.workspace = true
+parachain-info.workspace = true
+parachains-common.workspace = true
+cumulus-primitives-core.workspace = true
+cumulus-primitives-parachain-inherent.workspace = true
+cumulus-test-relay-sproof-builder.workspace = true
+xcm.workspace = true
+xcm-executor.workspace = true
+pallet-xcm.workspace = true
+xcm-runtime-apis.workspace = true
+polkadot-parachain-primitives.workspace = true
 
 [dev-dependencies]
 hex-literal = { workspace = true, default-features = true }
