--- a/.github/workflows/verify-templates-dev-chain-spec.yml
+++ b/.github/workflows/verify-templates-dev-chain-spec.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     types: [opened, synchronize, reopened, ready_for_review]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 permissions:
   contents: read
 
