change job name so that it doesn note trigger required rule

--- a/.github/workflows/publish-check-compile.yml
+++ b/.github/workflows/publish-check-compile.yml
@@ -16,7 +16,7 @@ jobs:
   preflight:
     uses: ./.github/workflows/reusable-preflight.yml
 
-  check-publish:
+  check-publish-compile:
     timeout-minutes: 90
     needs: [preflight]
     runs-on: ${{ needs.preflight.outputs.RUNNER }}
