--- a/substrate/frame/paged-list/fuzzer/Cargo.toml
+++ b/substrate/frame/paged-list/fuzzer/Cargo.toml
@@ -26,4 +26,5 @@ pallet-paged-list = { features = ["std"], workspace = true }
 default = ["std"]
 std = [
 	"frame/std",
+	"pallet-paged-list/std",
 ]
