--- a/polkadot/node/network/approval-distribution/Cargo.toml
+++ b/polkadot/node/network/approval-distribution/Cargo.toml
@@ -40,5 +40,4 @@ schnorrkel = { workspace = true }
 # rand_core should match schnorrkel
 log = { workspace = true, default-features = true }
 rand_chacha = { workspace = true, default-features = true }
-rand_core = { workspace = true }
-sp-tracing = { workspace = true }
+log = { workspace = true, default-features = true }
