--- a/substrate/client/db/Cargo.toml
+++ b/substrate/client/db/Cargo.toml
@@ -28,10 +28,12 @@ log = { workspace = true, default-features = true }
 parity-db = { workspace = true }
 parking_lot = { workspace = true, default-features = true }
 sc-client-api = { workspace = true, default-features = true }
+sc-consensus-grandpa = { workspace = true }
 sc-state-db = { workspace = true, default-features = true }
 schnellru = { workspace = true }
 sp-arithmetic = { workspace = true, default-features = true }
 sp-blockchain = { workspace = true, default-features = true }
+sp-consensus-grandpa = { workspace = true }
 sp-core = { workspace = true, default-features = true }
 sp-database = { workspace = true, default-features = true }
 sp-runtime = { workspace = true, default-features = true }
