--- a/substrate/frame/opf/Cargo.toml
+++ b/substrate/frame/opf/Cargo.toml
@@ -22,12 +22,15 @@ frame-support = { workspace = true, default-features = false }
 frame-system = { workspace = true, default-features = false }
 log = { workspace = true }
 pallet-conviction-voting = { workspace = true, default-features = false }
+pallet-scheduler = { workspace = true, default-features = false }
 scale-info = { features = [
 	"derive",
 ], workspace = true, default-features = false }
+serde = { optional = true, workspace = true, default-features = true }
 sp-core = { workspace = true, default-features = false }
 sp-io = { workspace = true, default-features = false }
 sp-runtime = { workspace = true, default-features = false }
+sp-std = { workspace = true, default-features = true }
 
 [dev-dependencies]
 pallet-assets = { workspace = true, default-features = true }
@@ -53,6 +56,8 @@ runtime-benchmarks = [
 	"pallet-sudo/runtime-benchmarks",
 	"pallet-timestamp/runtime-benchmarks",
 	"pallet-transaction-payment/runtime-benchmarks",
+	"scale-info/std",
+	"serde",
 	"sp-runtime/runtime-benchmarks",
 ]
 std = [
