--- a/substrate/frame/Cargo.toml
+++ b/substrate/frame/Cargo.toml
@@ -38,6 +38,7 @@ frame-system = { workspace = true }
 # primitive types used for developing FRAME runtimes.
 sp-version = { optional = true, workspace = true }
 sp-api = { optional = true, workspace = true }
+sp-application-crypto = { optional = true, workspace = true }
 sp-block-builder = { optional = true, workspace = true }
 sp-transaction-pool = { optional = true, workspace = true }
 sp-offchain = { optional = true, workspace = true }
@@ -48,6 +49,7 @@ sp-genesis-builder = { optional = true, workspace = true }
 sp-inherents = { optional = true, workspace = true }
 sp-storage = { optional = true, workspace = true }
 sp-keyring = { optional = true, workspace = true }
+sp-keystore = { optional = true, workspace = true }
 
 frame-executive = { optional = true, workspace = true }
 frame-system-rpc-runtime-api = { optional = true, workspace = true }
@@ -67,17 +69,19 @@ pallet-examples = { workspace = true }
 
 [features]
 default = ["runtime", "std"]
-experimental = ["frame-support/experimental"]
+experimental = ["frame-support/experimental", "frame-system/experimental"]
 runtime = [
 	"frame-executive",
 	"frame-system-rpc-runtime-api",
 	"sp-api",
+	"sp-application-crypto",
 	"sp-block-builder",
 	"sp-consensus-aura",
 	"sp-consensus-grandpa",
 	"sp-genesis-builder",
 	"sp-inherents",
 	"sp-keyring",
+	"sp-keystore",
 	"sp-offchain",
 	"sp-session",
 	"sp-storage",
@@ -96,6 +100,7 @@ std = [
 	"log/std",
 	"scale-info/std",
 	"sp-api?/std",
+	"sp-application-crypto?/std",
 	"sp-arithmetic/std",
 	"sp-block-builder?/std",
 	"sp-consensus-aura?/std",
@@ -105,6 +110,7 @@ std = [
 	"sp-inherents?/std",
 	"sp-io/std",
 	"sp-keyring?/std",
+	"sp-keystore?/std",
 	"sp-offchain?/std",
 	"sp-runtime/std",
 	"sp-session?/std",
