WIP, need more items in prelude

--- a/substrate/frame/Cargo.toml
+++ b/substrate/frame/Cargo.toml
@@ -38,6 +38,7 @@ frame-system = { workspace = true }
 # primitive types used for developing FRAME runtimes.
 sp-version = { optional = true, workspace = true }
 sp-api = { optional = true, workspace = true }
+sp-application-crypto = { optional = true, workspace = true }
 sp-block-builder = { optional = true, workspace = true }
 sp-transaction-pool = { optional = true, workspace = true }
 sp-offchain = { optional = true, workspace = true }
@@ -72,6 +73,7 @@ runtime = [
 	"frame-executive",
 	"frame-system-rpc-runtime-api",
 	"sp-api",
+	"sp-application-crypto",
 	"sp-block-builder",
 	"sp-consensus-aura",
 	"sp-consensus-grandpa",
@@ -96,6 +98,7 @@ std = [
 	"log/std",
 	"scale-info/std",
 	"sp-api?/std",
+	"sp-application-crypto?/std",
 	"sp-arithmetic/std",
 	"sp-block-builder?/std",
 	"sp-consensus-aura?/std",
