--- a/substrate/frame/mixnet/Cargo.toml
+++ b/substrate/frame/mixnet/Cargo.toml
@@ -35,6 +35,9 @@ std = [
 	"sp-application-crypto/std",
 	"sp-mixnet/std",
 ]
+runtime-benchmarks = [
+	"frame/runtime-benchmarks",
+]
 try-runtime = [
 	"frame/try-runtime",
 ]
