--- a/substrate/frame/Cargo.toml
+++ b/substrate/frame/Cargo.toml
@@ -44,6 +44,7 @@ sp-offchain = { optional = true, workspace = true }
 sp-session = { optional = true, workspace = true }
 sp-consensus-aura = { optional = true, workspace = true }
 sp-consensus-grandpa = { optional = true, workspace = true }
+sp-crypto-hashing = { optional = true, workspace = true }
 sp-genesis-builder = { optional = true, workspace = true }
 sp-inherents = { optional = true, workspace = true }
 sp-storage = { optional = true, workspace = true }
@@ -101,6 +102,7 @@ std = [
 	"sp-consensus-aura?/std",
 	"sp-consensus-grandpa?/std",
 	"sp-core/std",
+	"sp-crypto-hashing?/std",
 	"sp-genesis-builder?/std",
 	"sp-inherents?/std",
 	"sp-io/std",
@@ -118,6 +120,7 @@ runtime-benchmarks = [
 	"frame-system-benchmarking/runtime-benchmarks",
 	"frame-system/runtime-benchmarks",
 	"sp-runtime/runtime-benchmarks",
+	"sp-crypto-hashing",
 ]
 try-runtime = [
 	"frame-executive/try-runtime",
