sp_crypto_hashing in runtime feature

--- a/substrate/frame/Cargo.toml
+++ b/substrate/frame/Cargo.toml
@@ -76,6 +76,7 @@ runtime = [
 	"sp-block-builder",
 	"sp-consensus-aura",
 	"sp-consensus-grandpa",
+	"sp-crypto-hashing",
 	"sp-genesis-builder",
 	"sp-inherents",
 	"sp-keyring",
