--- a/.config/lychee.toml
+++ b/.config/lychee.toml
@@ -28,7 +28,7 @@ exclude = [
 	"http://visitme/",
 	"https://visitme/",
 
-	# TODO <https://github.com/paritytech/polkadot-sdk/issues/134>
+	# TODO meta issue: <https://github.com/paritytech/polkadot-sdk/issues/134>
 	"https://docs.substrate.io/main-docs/build/custom-rpc/#public-rpcs",
 	"https://docs.substrate.io/rustdocs/latest/sp_api/macro.decl_runtime_apis.html",
 	"https://github.com/ipfs/js-ipfs-bitswap/blob/",
@@ -50,8 +50,10 @@ exclude = [
 	"https://w3f.github.io/parachain-implementers-guide/runtime/session_info.html",
 
 	# Behind a captcha (code 403):
+	"https://chainlist.org/chain/*",
 	"https://iohk.io/en/blog/posts/2023/11/03/partner-chains-are-coming-to-cardano/",
 	"https://www.reddit.com/r/rust/comments/3spfh1/does_collect_allocate_more_than_once_while/",
+
 	# 403 rate limited:
 	"https://etherscan.io/block/11090290",
 	"https://subscan.io/",
