fix(malus-collator): set correct upward messages

--- a/polkadot/parachain/test-parachains/undying/Cargo.toml
+++ b/polkadot/parachain/test-parachains/undying/Cargo.toml
@@ -12,6 +12,7 @@ license.workspace = true
 workspace = true
 
 [dependencies]
+polkadot-primitives = { workspace = true, default-features = false }
 polkadot-parachain-primitives = { features = ["wasm-api"], workspace = true }
 codec = { features = ["derive"], workspace = true }
 tiny-keccak = { features = ["keccak"], workspace = true }
@@ -29,6 +30,7 @@ default = ["std"]
 std = [
 	"codec/std",
 	"log/std",
+	"polkadot-primitives/std",
 	"polkadot-parachain-primitives/std",
 	"sp-io/std",
 ]
