--- a/polkadot/zombienet_tests/functional/0020-same-collation-to-all-assigned-cores.toml
+++ b/polkadot/zombienet_tests/functional/0020-same-collation-to-all-assigned-cores.toml
@@ -29,11 +29,17 @@ id = 2000
 addToGenesis = true
 genesis_state_generator = "undying-collator export-genesis-state --pov-size=100000 --pvf-complexity=1"
 
-  [parachains.collator]
+  [[parachains.collators]]
   name = "collator01"
   image = "{{COL_IMAGE}}"
   command = "undying-collator"
   args = ["--malus", "-lparachain=debug", "--pov-size=100000", "--pvf-complexity=1", "--parachain-id=2000"]
+
+  [[parachains.collators]]
+  name = "collator02"
+  image = "{{COL_IMAGE}}"
+  command = "undying-collator"
+  args = ["-lparachain=debug", "--pov-size=100000", "--pvf-complexity=1", "--parachain-id=2000"]
 
 [types.Header]
 number = "u64"
