--- a/.github/workflows/networking-benchmarks.yml
+++ b/.github/workflows/networking-benchmarks.yml
@@ -31,11 +31,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Check Rust
-        run: |
-          rustup show
-          rustup +nightly show
-
       - name: Run Benchmarks
         id: run-benchmarks
         run: |
@@ -46,7 +41,7 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v4.3.6
         with:
-          name:
+          name: networking-bench-${{ github.sha }}
           path: ./charts
 
   publish-benchmarks:
@@ -67,6 +62,7 @@ jobs:
       - name: Download artifacts
         uses: actions/download-artifact@v4.1.8
         with:
+          name: networking-bench-${{ github.sha }}
           path: ./charts
 
       - name: Setup git
