--- a/substrate/frame/opf/Cargo.toml
+++ b/substrate/frame/opf/Cargo.toml
@@ -22,6 +22,7 @@ frame-support = { workspace = true, default-features = false }
 frame-system = { workspace = true, default-features = false }
 log = { workspace = true }
 pallet-conviction-voting = { workspace = true, default-features = false }
+pallet-referenda = { workspace = true, default-features = true }
 pallet-scheduler = { workspace = true, default-features = false }
 scale-info = { features = [
 	"derive",
@@ -52,6 +53,7 @@ runtime-benchmarks = [
 	"pallet-balances/runtime-benchmarks",
 	"pallet-conviction-voting/runtime-benchmarks",
 	"pallet-preimage/runtime-benchmarks",
+	"pallet-referenda/runtime-benchmarks",
 	"pallet-scheduler/runtime-benchmarks",
 	"pallet-sudo/runtime-benchmarks",
 	"pallet-timestamp/runtime-benchmarks",
@@ -70,6 +72,7 @@ std = [
 	"pallet-balances/std",
 	"pallet-conviction-voting/std",
 	"pallet-preimage/std",
+	"pallet-referenda/std",
 	"pallet-scheduler/std",
 	"pallet-sudo/std",
 	"pallet-timestamp/std",
@@ -87,6 +90,7 @@ try-runtime = [
 	"pallet-balances/try-runtime",
 	"pallet-conviction-voting/try-runtime",
 	"pallet-preimage/try-runtime",
+	"pallet-referenda/try-runtime",
 	"pallet-scheduler/try-runtime",
 	"pallet-sudo/try-runtime",
 	"pallet-timestamp/try-runtime",
