--- a/.github/workflows/networking-benchmarks.yml
+++ b/.github/workflows/networking-benchmarks.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - master
+  pull_request:
+    types: [opened, synchronize, reopened, ready_for_review]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
@@ -27,12 +29,8 @@ jobs:
       matrix:
         features:
           [
-            {
-              bench: "notifications_protocol",
-            },
-            {
-              bench: "request_response_protocol",
-            },
+            { bench: "notifications_protocol" },
+            { bench: "request_response_protocol" },
           ]
     steps:
       - name: Checkout
@@ -54,8 +52,8 @@ jobs:
   publish-benchmarks:
     timeout-minutes: 60
     needs: [build]
-    if: github.ref == 'refs/heads/master'
-    environment: subsystem-benchmarks
+    # if: github.ref == 'refs/heads/master'
+    # environment: subsystem-benchmarks
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -69,7 +67,13 @@ jobs:
       - name: Download artifacts
         uses: actions/download-artifact@v4.1.8
         with:
-          name: networking-bench-${{ github.sha }}
+          name: notifications_protocol-${{ github.sha }}
+          path: ./charts
+
+      - name: Download artifacts
+        uses: actions/download-artifact@v4.1.8
+        with:
+          name: request_response_protocol-${{ github.sha }}
           path: ./charts
 
       - name: Setup git
@@ -78,30 +82,30 @@ jobs:
           git config --global --add safe.directory '*'
           ls -lsR ./charts
 
-      - uses: actions/create-github-app-token@v1
-        id: app-token
-        with:
-          app-id: ${{ secrets.POLKADOTSDK_GHPAGES_APP_ID }}
-          private-key: ${{ secrets.POLKADOTSDK_GHPAGES_APP_KEY }}
+      # - uses: actions/create-github-app-token@v1
+      #   id: app-token
+      #   with:
+      #     app-id: ${{ secrets.POLKADOTSDK_GHPAGES_APP_ID }}
+      #     private-key: ${{ secrets.POLKADOTSDK_GHPAGES_APP_KEY }}
 
-      - name: Generate ${{ env.BENCH }}
-        env:
-          BENCH: notifications_protocol
-        uses: benchmark-action/github-action-benchmark@v1
-        with:
-          tool: "cargo"
-          output-file-path: ./charts/${{ env.BENCH }}.txt
-          benchmark-data-dir-path: ./bench/${{ env.BENCH }}
-          github-token: ${{ steps.app-token.outputs.token }}
-          auto-push: true
+      # - name: Generate ${{ env.BENCH }}
+      #   env:
+      #     BENCH: notifications_protocol
+      #   uses: benchmark-action/github-action-benchmark@v1
+      #   with:
+      #     tool: "cargo"
+      #     output-file-path: ./charts/${{ env.BENCH }}.txt
+      #     benchmark-data-dir-path: ./bench/${{ env.BENCH }}
+      #     github-token: ${{ steps.app-token.outputs.token }}
+      #     auto-push: true
 
-      - name: Generate ${{ env.BENCH }}
-        env:
-          BENCH: request_response_protocol
-        uses: benchmark-action/github-action-benchmark@v1
-        with:
-          tool: "cargo"
-          output-file-path: ./charts/${{ env.BENCH }}.txt
-          benchmark-data-dir-path: ./bench/${{ env.BENCH }}
-          github-token: ${{ steps.app-token.outputs.token }}
-          auto-push: true
+      # - name: Generate ${{ env.BENCH }}
+      #   env:
+      #     BENCH: request_response_protocol
+      #   uses: benchmark-action/github-action-benchmark@v1
+      #   with:
+      #     tool: "cargo"
+      #     output-file-path: ./charts/${{ env.BENCH }}.txt
+      #     benchmark-data-dir-path: ./bench/${{ env.BENCH }}
+      #     github-token: ${{ steps.app-token.outputs.token }}
+      #     auto-push: true
