print version in preflight

--- a/.github/workflows/reusable-preflight.yml
+++ b/.github/workflows/reusable-preflight.yml
@@ -203,6 +203,7 @@ jobs:
           echo $( substrate-contracts-node --version | awk 'NF' )
           estuary --version
           cargo-contract --version
+          taplo --version
 
       - name: Info forklift
         run: forklift version
