fix env var for polkadot image

--- a/.gitlab/pipeline/zombienet/polkadot.yml
+++ b/.gitlab/pipeline/zombienet/polkadot.yml
@@ -387,6 +387,7 @@ zombienet-polkadot-elastic-scaling-doesnt-break-parachains:
       artifacts: true
   before_script:
     - !reference [ ".zombienet-polkadot-common", "before_script" ]
+    - export POLKADOT_IMAGE="${ZOMBIENET_INTEGRATION_TEST_IMAGE}"
     - export X_INFRA_INSTANCE=spot # use spot by default
   variables:
     KUBERNETES_CPU_REQUEST: "1"
@@ -404,6 +405,7 @@ zombienet-polkadot-elastic-scaling-basic-3cores:
       artifacts: true
   before_script:
     - !reference [ ".zombienet-polkadot-common", "before_script" ]
+    - export POLKADOT_IMAGE="${ZOMBIENET_INTEGRATION_TEST_IMAGE}"
     - export CUMULUS_IMAGE="${COL_IMAGE}"
     - export X_INFRA_INSTANCE=spot # use spot by default
   script:
@@ -420,6 +422,7 @@ zombienet-polkadot-functional-sync-backing:
       artifacts: true
   before_script:
     - !reference [ ".zombienet-polkadot-common", "before_script" ]
+    - export POLKADOT_IMAGE="${ZOMBIENET_INTEGRATION_TEST_IMAGE}"
     # Hardcoded to an old polkadot-parachain image, pre async backing.
     - export CUMULUS_IMAGE="docker.io/paritypr/polkadot-parachain-debug:master-99623e62"
     - export X_INFRA_INSTANCE=spot # use spot by default
@@ -437,6 +440,7 @@ zombienet-polkadot-functional-async-backing-6-seconds-rate:
       artifacts: true
   before_script:
     - !reference [ ".zombienet-polkadot-common", "before_script" ]
+    - export POLKADOT_IMAGE="${ZOMBIENET_INTEGRATION_TEST_IMAGE}"
     - export X_INFRA_INSTANCE=spot # use spot by default
   script:
     # we want to use `--no-capture` in zombienet tests.
