--- a/bridges/snowbridge/pallets/outbound-queue-v2/Cargo.toml
+++ b/bridges/snowbridge/pallets/outbound-queue-v2/Cargo.toml
@@ -82,7 +82,7 @@ runtime-benchmarks = [
 	"sp-runtime/runtime-benchmarks",
 	"xcm-builder/runtime-benchmarks",
 	"xcm-executor/runtime-benchmarks",
-	"xcm/runtime-benchmarks"
+	"xcm/runtime-benchmarks",
 ]
 try-runtime = [
 	"frame-support/try-runtime",
