--- a/polkadot/node/network/protocol/Cargo.toml
+++ b/polkadot/node/network/protocol/Cargo.toml
@@ -19,7 +19,6 @@ codec = { features = ["derive"], workspace = true }
 derive_more = { workspace = true, default-features = true }
 fatality = { workspace = true }
 futures = { workspace = true }
-gum = { workspace = true, default-features = true }
 hex = { workspace = true, default-features = true }
 polkadot-node-primitives = { workspace = true, default-features = true }
 polkadot-primitives = { workspace = true, default-features = true }
@@ -28,6 +27,7 @@ sc-authority-discovery = { workspace = true, default-features = true }
 sc-network = { workspace = true, default-features = true }
 sc-network-types = { workspace = true, default-features = true }
 sp-runtime = { workspace = true, default-features = true }
+sp-tracing = { workspace = true, default-features = true }
 strum = { features = ["derive"], workspace = true, default-features = true }
 thiserror = { workspace = true }
 
