--- a/polkadot/node/overseer/Cargo.toml
+++ b/polkadot/node/overseer/Cargo.toml
@@ -15,7 +15,6 @@ workspace = true
 async-trait = { workspace = true }
 futures = { workspace = true }
 futures-timer = { workspace = true }
-gum = { workspace = true, default-features = true }
 orchestra = { features = ["futures_channel"], workspace = true }
 parking_lot = { workspace = true, default-features = true }
 polkadot-node-metrics = { workspace = true, default-features = true }
@@ -26,6 +25,7 @@ polkadot-primitives = { workspace = true, default-features = true }
 sc-client-api = { workspace = true, default-features = true }
 sp-api = { workspace = true, default-features = true }
 sp-core = { workspace = true, default-features = true }
+sp-tracing = { workspace = true, default-features = true }
 tikv-jemalloc-ctl = { optional = true, workspace = true }
 
 [dev-dependencies]
